# skripsi

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  scraper.py  test.py  tox.ini  utils.py
.github/workflows/: linting.yaml  testing.yaml
data/: README.md  denied-users.json  sample-data.csv
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/main/: main.js
kamus/: README.md  kata-gaul.json  stopwords.json
models/: CV-log.csv
notebook/: EDA.ipynb  Main Notebook.ipynb  Reduce Model.ipynb  Sampling.ipynb  sampling.ipynb
scripts/: __main__.py  model-tester.py  model_tester.py  preprocessing.py  scraper.py  test.py  utils.py
scripts/test/: preprocessing.py  utils.py
server/: settings.py  wsgi.py
src/: __main__.py  model_tester.py  scraper.py  utils.py
src/dashboard/: Home.py
src/dashboard/pages/: EDA.py
tests/: test_model.py  test_model_tester.py  test_preprocessing.py  test_scrape.py  test_utils.py
