[tool.poetry]
name = 'skripsi'
version = '0.1.0'
description = 'Main repository untuk project skripsi'
authors = ['Wahyu Setianto <wahyusetianto19@gmail.com>']
readme = 'README.md'

[tool.poetry.urls]
repository = 'https://github.com/Hyuto/skripsi'
"Bug Tracker" = 'https://github.com/Hyuto/skripsi/issues'

[tool.poetry.dependencies]
python = '>=3.8,<3.9.7 || >3.9.7,<4.0'
numpy = '^1.23.1'
pandas = '^1.4.3'
matplotlib = '^3.5.2'
seaborn = '^0.11.2'
scikit-learn = '^1.1.1'
PySastrawi = '^1.2.0'
typer = { extras = ["all"], version = "^0.6.1" }
psutil = "^5.9.2"
indonlp = "^0.3.2"
wordcloud = "^1.8.2.2"
skl2onnx = "^1.13"
onnxruntime = "1.12.1"
jupyter = { version = "^1.0.0", optional = true }
tqdm = "^4.64.1"
streamlit = "^1.17.0"
snscrape = "^0.5.0"

[tool.poetry.dev-dependencies]
isort = '^5.10.1'
mypy = '^0.961'
pytest = '^7.1.2'
coverage = '^6.4.1'
pytest-cov = '^3.0.0'
pre-commit = '^2.20.0'
black = "^22.12.0"

[tool.poetry.extras]
jupyter = ["jupyter"]

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.mypy]
files = ['src']
exclude = ["dashboard"]
show_error_codes = true
strict = true

[tool.black]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | __pycache__
  | \.mypy_cache
  | \.tox
  | \.venv
  | app
  | data
  | kamus
)/
'''

[tool.coverage.run]
omit = ["**/__main__.py", "dashboard/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = ['pragma: no cover', 'if __name__ == "__main__":']
